Improved the documentation layout.

--- a/docs/_posts/2019-11-01-lab-1.md
+++ b/docs/_posts/2019-11-01-lab-1.md
@@ -1,11 +1,18 @@
-## Lab 1 - Create your own AWS IoT Button
+---
+layout: post
+title:  "Lab 1 - Create your own AWS IoT Button"
+categories: [lab]
+tags: [iot-core]
+excerpt_separator: <!--more-->
+---
 
-### Introduction
 A couple years ago, AWS announced the AWS IoT Button you could order from Amazon.com. Why not create our own ?
 
 For this lab, our M5StickC will act as an AWS IoT Button, allowing you to trigger downstream AWS Services.
 
-### Configuration
+<!--more-->
+
+## Configuration
 In order to configure the code and your M5StickC for Lab1, you must change the following lines of code:
 
 ```bash
@@ -20,16 +27,16 @@ With:
 #define M5CONFIG_LAB1_AWS_IOT_BUTTON
 ```
 
-### Rebuild Code
+## Rebuild Code
 ```bash
 cd ./amazon-freertos/vendors/espressif/boards/m5stickc/aws_demos
 make all -j4
 ```
 
-### Flash Code
-Please follow the procedure form the following [Setup](./docs/flashing.md) guide.
+## Flash Code
+Please follow the procedure form the following [Setup](./flashing.html) guide.
 
-### Result
+## Result
 Log into your AWS IoT Management console, and subscribe to the following topic:
 
 ```bash
@@ -38,7 +45,7 @@ m5stickc/+
 
 * Click the button: You should see the following JSON document flow on the broker
 
-```bash
+```json
 {
 	"serialNumber": "[YOUR DEVICE SERIAL NUMBER]",
 	"clickType": "SINGLE"
@@ -47,11 +54,9 @@ m5stickc/+
 
 * Hold the button: You should see the following JSON document flow on the broker
 
-```bash
+```json
 {
 	"serialNumber": "[YOUR DEVICE SERIAL NUMBER]",
 	"clickType": "HOLD"
 }
 ```
-
-### [BACK](./../../README.md)
