--- a/docs/_posts/2019-11-01-lab-2.md
+++ b/docs/_posts/2019-11-01-lab-2.md
@@ -1,6 +1,10 @@
-## Lab 2 - Interract with the Thing Shadow
+---
+layout: post
+title:  "Lab 2 - Interract with the Thing"
+categories: [lab]
+tags: [iot-core, shadow]
+---
 
-### Introduction
 It's the summer, and its hot outside. Lets play around with remove controlled Air Conditioning units.
 
 For this lab, our M5StickC will act as our Air Conditioning unit.
@@ -10,7 +14,9 @@ You can turn the AirCon ON or OFF remotely as well as set a target temperature.
 * If the AirCon is OFF, the temperature will rise to a stable 40 deg celcius.
 * If the AirCon is ON, the temperature will decrease to reach your chosen temperature
 
-### Configuration
+<!--more-->
+
+## Configuration
 
 In order to configure the code and your M5StickC for Lab2, you must change the following lines of code:
 
@@ -26,24 +32,24 @@ With:
 #define M5CONFIG_LAB2_SHADOW
 ```
 
-### Rebuild Code
+## Rebuild Code
 
 ```bash
 cd ./amazon-freertos/vendors/espressif/boards/m5stickc/aws_demos
 make all -j4
 ```
 
-### Flash Code
-Please follow the procedure form the following [Setup](./docs/flashing.md) guide.
+## Flash Code
+Please follow the procedure form the following [Setup](./flashing.html) guide.
 
-### Result
+## Result
 Log into your AWS IoT Management console, and open up your Thing.
 
 Click on Shadow.
 
 1. The device should have reported it's first state at this point and your shadow document should look something like:
 
-```bash
+```json
 {
 	"reported": {
 		"powerOn": 0,
@@ -54,7 +60,7 @@ Click on Shadow.
 
 2. Edit this shadow document, on the page with the following:
 
-```bash
+```json
 {
 	"desired": {
 		"powerOn": 1,
@@ -65,7 +71,7 @@ Click on Shadow.
 
 This should instantly result in a compiled shadow document looking something like:
 
-```bash
+```json
 {
 	"desired": {
 		"powerOn": 1,
@@ -86,5 +92,3 @@ Whatch how now that you have turned on your Air Con, the temperature will slowly
 
 > Note: Be carefull when setting the temperature value. The code only supports positive integer values. Do not use a floating point value.
 
-
-### [BACK](./../../README.md)
