--- a/docs/_posts/2019-11-01-lab-2.md
+++ b/docs/_posts/2019-11-01-lab-2.md
@@ -14,6 +14,8 @@ You can turn the AirCon ON or OFF remotely as well as set a target temperature.
 * If the AirCon is OFF, the temperature will rise to a stable 40 deg celcius.
 * If the AirCon is ON, the temperature will decrease to reach your chosen temperature
 
+![Thing](/assets/images/lab3/lab3-test-3.png)
+
 <!--more-->
 
 ## Configuration
