--- a/docs/_posts/2019-11-01-lab-0.md
+++ b/docs/_posts/2019-11-01-lab-0.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Lab 0 - Setup"
 categories: [lab]
 tags: [setup]
+name: 2019-11-01-lab-0
 excerpt_separator: <!--more-->
 ---
 
