--- a/docs/_posts/2019-10-31-lab-1.md
+++ b/docs/_posts/2019-10-31-lab-1.md
@@ -1,9 +1,11 @@
 ---
-layout: default
+layout: post
 title:  "Lab 1 - Create your own AWS IoT Button"
 categories: [lab]
 tags: [iot-core]
 excerpt_separator: <!--more-->
+permalink: /lab/lab-1
+name: /lab/lab-1.html
 ---
 
 A couple years ago, AWS announced the AWS IoT Button you could order from Amazon.com. Why not create our own ?
