--- a/docs/_posts/2019-10-31-lab-2.md
+++ b/docs/_posts/2019-10-31-lab-2.md
@@ -1,9 +1,11 @@
 ---
-layout: default
 layout: post
 title:  "Lab 2 - Interract with the Thing"
 categories: [lab]
 tags: [iot-core, shadow]
+excerpt_separator: <!--more-->
+permalink: /lab/lab-2
+name: /lab/lab-2.html
 ---
 
 It's the summer, and its hot outside. Lets play around with remove controlled Air Conditioning units.
