--- a/docs/_posts/2019-10-31-lab-3.md
+++ b/docs/_posts/2019-10-31-lab-3.md
@@ -1,8 +1,11 @@
 ---
-layout: default
+layout: post
 title:  "Lab 3 - Alexa"
 categories: [lab]
 tags: [iot-core, shadow, alexa]
+excerpt_separator: <!--more-->
+permalink: /lab/lab-3
+name: /lab/lab-3.html
 ---
 
 Wouldn't it be great if you could control your Air Conditioning unit with your voice? No need to search for the remote anymore!
