--- a/docs/_posts/2019-10-31-lab-0.md
+++ b/docs/_posts/2019-10-31-lab-0.md
@@ -4,8 +4,8 @@ title:  "Lab 0 - Setup"
 categories: [lab]
 tags: [setup]
 excerpt_separator: <!--more-->
-permalink: /lab/lab-0
-name: /lab/lab-0.html
+permalink: /_posts/2019-10-31-lab-0
+name: /_posts/2019-10-31-lab-0.html
 ---
 
 If you follow the Setup guide, you will have nothing to do. The code first compiles to Lab 0
@@ -19,4 +19,4 @@ There are multiple ways to run this workshop.
 
 ## [Set up your Cloud9 Environment]({{ "/setup/cloud9.html" }})
 
-## [Build on your laptop]({{ "/setup/laptopbuild.html"}})
+## [Build on your laptop]({{ "/setup/laptopbuild.html" }})
