Trying to fix images

--- a/docs/_posts/2019-10-31-lab-0.md
+++ b/docs/_posts/2019-10-31-lab-0.md
@@ -17,6 +17,6 @@ You can wake up the device by pressing the front button. This will trigger a ful
 
 There are multiple ways to run this workshop.
 
-## [Set up your Cloud9 Environment]({{ "/setup/cloud9.html" }})
+## [Set up your Cloud9 Environment]({{ "/setup/cloud9.html" | absolute_url }})
 
-## [Build on your laptop]({{ "/setup/laptopbuild.html" }})
+## [Build on your laptop]({{ "/setup/laptopbuild.html" | absolute_url }})
