--- a/docs/_posts/2019-10-31-lab-1.md
+++ b/docs/_posts/2019-10-31-lab-1.md
@@ -36,7 +36,7 @@ make all -j4
 ```
 
 ## Flash Code
-Please follow the procedure form the following [Setup](./flashing.html) guide.
+Please follow the procedure form the following [Setup]({{ "/setup/flashing.html" | absolute_url }}) guide.
 
 ## Result
 Log into your AWS IoT Management console, and subscribe to the following topic:
