--- a/docs/_posts/2019-10-31-lab-3.md
+++ b/docs/_posts/2019-10-31-lab-3.md
@@ -21,7 +21,7 @@ We'll be able to ask Alexa:
 
 ## Preliminary
 
-This Lab requires you to have completed [Lab2](lab-2.html)
+This Lab requires you to have completed [Lab2]({{ "/lab/lab-2.html" | absolute_url }})
 
 ## Step 1. - *Develop your first Alexa Skill*
 
@@ -29,16 +29,16 @@ Setting up Your Alexa Skill in the Developer Console
 
 Go to the [Alexa Developer Console](https://developer.amazon.com/alexa/console/ask). In the top-right corner of the screen, click the "Sign In" button. (If you don't already have an account, you will be able to create a new one for free.)
 
-![Alexa Developer Console](/assets/images/lab3/lab3-alexa-signin.png)
+![Alexa Developer Console]({{ "/assets/images/lab3/lab3-alexa-signin.png" | absolute_url }})
 
 Once you have signed in, select the **Developer Console** link and then **Alexa Skills Kit**.
 From the Alexa Developer Console select the **Create Skill** button near the top-right of the list of your Alexa Skills.
 
-![Create Skill 1](/assets/images/lab3/lab3-create-alexa-skill-1.png)
+![Create Skill 1]({{ "/assets/images/lab3/lab3-create-alexa-skill-1.png" | absolute_url }})
 
 Give your new skill a Name, for example, **'workshop'**. This is the name that will be shown in the Alexa Skills Store, and the name your users will refer to.
 
-![Create Skill 2](/assets/images/lab3/lab3-create-alexa-skill-2.png)
+![Create Skill 2]({{ "/assets/images/lab3/lab3-create-alexa-skill-2.png" | absolute_url }})
 
 Select the Default Language. This tutorial will presume you have selected **'English (US)'**.
 Select the Custom model under the **'Choose a model to add to your skill'** section. Click the **Create Skill button** at the top right.
