--- a/docs/_posts/2019-10-31-lab-2.md
+++ b/docs/_posts/2019-10-31-lab-2.md
@@ -17,7 +17,7 @@ You can turn the AirCon ON or OFF remotely as well as set a target temperature.
 * If the AirCon is OFF, the temperature will rise to a stable 40 deg celcius.
 * If the AirCon is ON, the temperature will decrease to reach your chosen temperature
 
-![Thing](/assets/images/lab3/lab3-test-3.png)
+![Thing]({{ "/assets/images/lab3/lab3-test-3.png" | absolute_url }})
 
 <!--more-->
 
@@ -45,7 +45,7 @@ make all -j4
 ```
 
 ## Flash Code
-Please follow the procedure form the following [Setup](./flashing.html) guide.
+Please follow the procedure form the following [Setup]({{ "/setup/flashing.html" | absolute_url }}) guide.
 
 ## Result
 Log into your AWS IoT Management console, and open up your Thing.
