More image fixes

--- a/docs/_posts/2019-10-31-lab-3.md
+++ b/docs/_posts/2019-10-31-lab-3.md
@@ -49,7 +49,7 @@ Choose **Start from scratch** from the Choose a template section and click the *
 1. On the left hand navigation panel, select the **JSON Editor** tab under Interaction Model. In the textfield provided, replace any existing code with the code provided in the below sample. Click **Save Model**.
 2. Click **"Build Model"**
 
-![JSON Editor](/assets/images/lab3/lab3-json-editor.png)
+![JSON Editor]({{ "/assets/images/lab3/lab3-json-editor.png" | absolute_url }})
 
 ### Skill Sample
 
@@ -95,17 +95,17 @@ Choose **Start from scratch** from the Choose a template section and click the *
 
 We will take a pause of setting up the Alexa skills here to create the lambda function.
 
-![Wait for lambda](/assets/images/lab3/lab3-wait-for-lambda.png)
+![Wait for lambda]({{ "/assets/images/lab3/lab3-wait-for-lambda.png" | absolute_url }})
 
 ## Step2 Build your Alexa Skills lambda function
 
 In the management console, find lambda service
 
-![Lambda 1](/assets/images/lab3/lab3-lambda-1.png)
+![Lambda 1]({{ "/assets/images/lab3/lab3-lambda-1.png" | absolute_url }})
 
 navigate to lambda function service and select **"Create”**
 
-![Lambda 2](/assets/images/lab3/lab3-lambda-2.png)
+![Lambda 2]({{ "/assets/images/lab3/lab3-lambda-2.png" | absolute_url }})
 
 input the params for lambda function:
 
@@ -115,69 +115,69 @@ input the params for lambda function:
 
 then **"Create"**
 
-![Lambda 3](/assets/images/lab3/lab3-lambda-3.png)
+![Lambda 3]({{ "/assets/images/lab3/lab3-lambda-3.png" | absolute_url }})
 
 Next, configure the lambda function:
 
 First upload the lambda function zip package, you can download the code from [HERE](/assets/lab3/alexa_skill_lambda_v1.zip), keep the hander as **"lambda_function.lambda_handler"**, then slick **"Save”**
 
-![Lambda 4](/assets/images/lab3/lab3-lambda-4.png)
+![Lambda 4]({{ "/assets/images/lab3/lab3-lambda-4.png" | absolute_url }})
 
 Set your device shadow update topic as an environment variable. In Environment Variables section, create an environment variable named **shadow_update_topic** and set it's value to your thing's shadow update topic. Which should be something like: **$aws/things/[YOUR THING NAME]/shadow/update**
 
-![Lambda env](/assets/images/lab3/lab3-lambda-env.png)
+![Lambda env]({{ "/assets/images/lab3/lab3-lambda-env.png" | absolute_url }})
 
 Configure the lambda function service role, and the trigger events for this lambda
 
 Configure the service role by navigate to the execution role
 
-![Lambda 5](/assets/images/lab3/lab3-lambda-5.png)
+![Lambda 5]({{ "/assets/images/lab3/lab3-lambda-5.png" | absolute_url }})
 
 configure the role policies
 
-![Lambda 6](/assets/images/lab3/lab3-lambda-6.png)
+![Lambda 6]({{ "/assets/images/lab3/lab3-lambda-6.png" | absolute_url }})
 
 select **"AWSIoTFullAccess”**, then **attach**,
 
-![Lambda 7](/assets/images/lab3/lab3-lambda-7.png)
+![Lambda 7]({{ "/assets/images/lab3/lab3-lambda-7.png" | absolute_url }})
 
 Next, we set Alexa skills as the lambda function trigger,
 
-![Lambda 8](/assets/images/lab3/lab3-lambda-8.png)
+![Lambda 8]({{ "/assets/images/lab3/lab3-lambda-8.png" | absolute_url }})
 
 select **Alexa Skills Kit**
 
-![Lambda 9](/assets/images/lab3/lab3-lambda-9.png)
+![Lambda 9]({{ "/assets/images/lab3/lab3-lambda-9.png" | absolute_url }})
 
 Then input your skill ID
 
-![Lambda 10](/assets/images/lab3/lab3-lambda-10.png)
+![Lambda 10]({{ "/assets/images/lab3/lab3-lambda-10.png" | absolute_url }})
 
 to check the skill ID of your Alexa skills, go back to the Alexa develop console and navigate to your skill, to check skill ID
 
-![Lambda 11](/assets/images/lab3/lab3-lambda-11.png)
+![Lambda 11]({{ "/assets/images/lab3/lab3-lambda-11.png" | absolute_url }})
 
 After the configuration of IoT access, and the trigger events, your lambda configuration should look like this
 
-![Lambda 12](/assets/images/lab3/lab3-lambda-12.png)
+![Lambda 12]({{ "/assets/images/lab3/lab3-lambda-12.png" | absolute_url }})
 
 Now, since the lambda function is ready, you can set your "Endpoint” of your lambda skill
 
-![Lambda 13](/assets/images/lab3/lab3-lambda-13.png)
+![Lambda 13]({{ "/assets/images/lab3/lab3-lambda-13.png" | absolute_url }})
 
 ## Step3 Configure your Alexa Skills endpoint
 
 next we configure the Alexa skills endpoint
 
-![skill 1](/assets/images/lab3/lab3-skill-1.png)
+![skill 1]({{ "/assets/images/lab3/lab3-skill-1.png" | absolute_url }})
 
 configure your endpoint by input the ARN of your Alexa lambda function (check the next step to copy your lambda function’s ARN), and save the Endpoints
 
-![skill 2](/assets/images/lab3/lab3-skill-2.png)
+![skill 2]({{ "/assets/images/lab3/lab3-skill-2.png" | absolute_url }})
 
 You can find your ARN of the lambda function in your lambda function configure page
 
-![skill 3](/assets/images/lab3/lab3-skill-3.png)
+![skill 3]({{ "/assets/images/lab3/lab3-skill-3.png" | absolute_url }})
 
 ## Step4 Test Your Alexa Skills
 
@@ -187,17 +187,17 @@ First, make sure your device is running and reporting sensor data like the follo
 
 Secondly, navigate to the test console to test your skills, change the mode to Development
 
-![Test 1](/assets/images/lab3/lab3-test-1.png)
+![Test 1]({{ "/assets/images/lab3/lab3-test-1.png" | absolute_url }})
 
 then you can input the speeches as following, this will simulate as you are talking to an Echodot or your phone
 
-![Test 2](/assets/images/lab3/lab3-test-2.png)
+![Test 2]({{ "/assets/images/lab3/lab3-test-2.png" | absolute_url }})
 
 If the skills response **"ok! I've turned on the aircon”**, you can now check if your board reports the on / off state accordingly
 
-![Test 3](/assets/images/lab3/lab3-test-3.png)
+![Test 3]({{ "/assets/images/lab3/lab3-test-3.png" | absolute_url }})
 
 Additionally, you can check your logs on the IoT Core console or looking at the shadow document for your thing
 
-![Test 4](/assets/images/lab3/lab3-test-4.png)
+![Test 4]({{ "/assets/images/lab3/lab3-test-4.png" | absolute_url }})
 
