Fixed missing brackets

--- a/docs/_posts/2019-10-31-lab-3.md
+++ b/docs/_posts/2019-10-31-lab-3.md
@@ -119,7 +119,7 @@ then **"Create"**
 
 Next, configure the lambda function:
 
-First upload the lambda function zip package, you can download the code from [HERE]({{ "/assets/lab3/alexa_skill_lambda_v1.zip"  | absolute_url), keep the hander as **"lambda_function.lambda_handler"**, then slick **"Save”**
+First upload the lambda function zip package, you can download the code from [HERE]({{ "/assets/lab3/alexa_skill_lambda_v1.zip"  | absolute_url }}), keep the hander as **"lambda_function.lambda_handler"**, then slick **"Save”**
 
 ![Lambda 4]({{ "/assets/images/lab3/lab3-lambda-4.png" | absolute_url }})
 
